--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -21,7 +21,6 @@
 }
 
 .header,
-.game-nav,
 .main,
 .footer {
     grid-column-start: 2;
@@ -30,11 +29,22 @@
 .header {
     display: flex;
     align-items: center;
+    flex-wrap: wrap;
 }
 
-.header a {
+.header .logo {
     display: block;
     padding-right: 1rem;
+    text-decoration: none;
+    color: black;
+}
+
+.header .logo img {
+    padding-right: .5rem;
+}
+
+.game-nav {
+    width: 100%;
 }
 
 .game-nav ul {
