registration and login complete

--- a/src/views/partials/header.mustache
+++ b/src/views/partials/header.mustache
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Jana Deppe">
-    <title>Home - Spieleprofis!</title>
+    <title>{{pageTitle}}</title>
     <link rel='stylesheet' type='text/css' media='screen' href='/styles/main.css'>
   </head>
   <body>
@@ -14,7 +14,7 @@
         <a href="/" class="logo">
           <img src="https://pngimg.com/uploads/dice/dice_PNG25.png" alt=""
             width="50">
-          <strong>{{pageTitle}}</strong>
+          <strong>Spieleprofis!</strong>
         </a>
         <nav class="game-nav">
           <ul>
@@ -23,6 +23,18 @@
             <li><a href="/games/romme">Rommé</a></li>
             <li><a href="/games/scheresteinpapier">Schere Stein Papier</a></li>
             <li><a href="/games/tictactoe">Tic Tac Toe</a></li>
+          </ul>
+        </nav>
+        <nav class="auth-nav">
+          <ul>
+            {{^userName}}
+              <li><a href="/login">Login</a></li>
+              <li><a href="/register">Register</a></li>
+            {{/userName}}
+            {{#userName}}
+              <li>Hallo {{userName.name}}!</li>
+              <li><a href="/logout">Logout</a></li>
+            {{/userName}}
           </ul>
         </nav>
       </header>
