--- a/src/views/partials/header.mustache
+++ b/src/views/partials/header.mustache
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Jana Deppe">
     <title>Home - Spieleprofis!</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel='stylesheet' type='text/css' media='screen' href='/styles/main.css'>
+
   </head>
   <body>
     <div id="top" class="grid-wrapper"> <!-- .grid-wrapper -->
@@ -26,3 +28,5 @@
           </ul>
         </nav>
       </header>
+    </div>
+  </body>
