added bootstrap code to all the templates

--- a/src/views/games/scheresteinpapier.mustache
+++ b/src/views/games/scheresteinpapier.mustache
@@ -1,146 +1,149 @@
 {{> header}}
-<main class="main">
-  <h1>Schere! Stein! Papier!</h1>
+<main class="container">
+  <div class="row">
+    <div class="col-12">
+      <h1>Schere! Stein! Papier!</h1>
+      <h2>Inhaltsverzeichnis</h2>
 
-  <h2>Inhaltsverzeichnis</h2>
+      <ol>
+        <li><a href="#Geschichte">Geschichte</a></li>
+        <li><a href="#Vorraussetzung">Vorraussetzungen</a></li>
+        <li><a href="#Handzeichen">Handzeichen</a></li>
+        <li><a href="#Regeln">Regeln</a></li>
+        <li><a href="#Schlag-Tabelle">Schlag-Tabelle</a></li>
+      </ol>
 
-  <ol>
-    <li><a href="#Geschichte">Geschichte</a></li>
-    <li><a href="#Vorraussetzung">Vorraussetzungen</a></li>
-    <li><a href="#Handzeichen">Handzeichen</a></li>
-    <li><a href="#Regeln">Regeln</a></li>
-    <li><a href="#Schlag-Tabelle">Schlag-Tabelle</a></li>
-  </ol>
+      <h3 id="Geschichte">Geschichte</h3>
 
-  <h3 id="Geschichte">Geschichte</h3>
+      <p>
+        Woher stammt eigentlich Schere! Stein! Papier!? Vermutlich kommt es
+        aus Tims Wohnung. Wirklich wissen tut es aber keiner.
+      </p>
 
-  <p>
-    Woher stammt eigentlich Schere! Stein! Papier!? Vermutlich kommt es
-    aus Tims Wohnung. Wirklich wissen tut es aber keiner.
-  </p>
+      <p>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+        <s
+          >Tenetur magnam excepturi incidunt, ipsum facilis cupiditate nihil
+          vel temporibus sed modi praesentium et tempora quo numquam
+          perspiciatis, officiis veniam?</s
+        >
+        Voluptas, dolores.
+      </p>
 
-  <p>
-    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-    <s
-      >Tenetur magnam excepturi incidunt, ipsum facilis cupiditate nihil
-      vel temporibus sed modi praesentium et tempora quo numquam
-      perspiciatis, officiis veniam?</s
-    >
-    Voluptas, dolores.
-  </p>
+      <h3 id="Vorraussetzungen">Vorraussetzungen</h3>
 
-  <h3 id="Vorraussetzungen">Vorraussetzungen</h3>
+      <p>
+        Kommen wir zum schönen an <u><b>SCHERE! STEIN! PAPIER!</b></u
+        >. Du benötigst kein zusätzliches Equipment! Du benötigst nur deine
+        Hand.
+      </p>
 
-  <p>
-    Kommen wir zum schönen an <u><b>SCHERE! STEIN! PAPIER!</b></u
-    >. Du benötigst kein zusätzliches Equipment! Du benötigst nur deine
-    Hand.
-  </p>
+      <img
+        width="300"
+        src="https://images.pexels.com/photos/772662/pexels-photo-772662.jpeg?cs=srgb&dl=pexels-victor-freitas-772662.jpg&fm=jpg"
+        alt="Hand"
+      />
 
-  <img
-    width="300"
-    src="https://images.pexels.com/photos/772662/pexels-photo-772662.jpeg?cs=srgb&dl=pexels-victor-freitas-772662.jpg&fm=jpg"
-    alt="Hand"
-  />
+      <h3>Handzeichen</h3>
 
-  <h3>Handzeichen</h3>
+      <p>Hier alle Handzeichen die ihr verwenden dürft</p>
 
-  <p>Hier alle Handzeichen die ihr verwenden dürft</p>
+      <table>
+        <tr>
+          <th>
+            <h4>Schere:</h4>
+          </th>
+          <th>
+            <h4>Stein:</h4>
+          </th>
+          <th>
+            <h4>Papier:</h4>
+          </th>
+        </tr>
+        <tr>
+          <td>
+            <img
+              width="200"
+              src="https://images.pexels.com/photos/9017572/pexels-photo-9017572.jpeg?cs=srgb&dl=pexels-kevin-malik-9017572.jpg&fm=jpg"
+              alt="Schere Hand"
+            />
+          </td>
+          <td>
+            <img
+              width="200px"
+              src="https://images.pexels.com/photos/635356/pexels-photo-635356.jpeg?cs=srgb&dl=pexels-neosiam-635356.jpg&fm=jpg"
+              alt="Stein Hand"
+            />
+          </td>
+          <td>
+            <img
+              width="200px"
+              src="https://images.pexels.com/photos/9017588/pexels-photo-9017588.jpeg?cs=srgb&dl=pexels-kevin-malik-9017588.jpg&fm=jpg"
+              alt="Papier Hand"
+            />
+          </td>
+        </tr>
+      </table>
 
-  <table>
-    <tr>
-      <th>
-        <h4>Schere:</h4>
-      </th>
-      <th>
-        <h4>Stein:</h4>
-      </th>
-      <th>
-        <h4>Papier:</h4>
-      </th>
-    </tr>
-    <tr>
-      <td>
-        <img
-          width="200"
-          src="https://images.pexels.com/photos/9017572/pexels-photo-9017572.jpeg?cs=srgb&dl=pexels-kevin-malik-9017572.jpg&fm=jpg"
-          alt="Schere Hand"
-        />
-      </td>
-      <td>
-        <img
-          width="200px"
-          src="https://images.pexels.com/photos/635356/pexels-photo-635356.jpeg?cs=srgb&dl=pexels-neosiam-635356.jpg&fm=jpg"
-          alt="Stein Hand"
-        />
-      </td>
-      <td>
-        <img
-          width="200px"
-          src="https://images.pexels.com/photos/9017588/pexels-photo-9017588.jpeg?cs=srgb&dl=pexels-kevin-malik-9017588.jpg&fm=jpg"
-          alt="Papier Hand"
-        />
-      </td>
-    </tr>
-  </table>
+      <h3 id="Regeln">Regeln</h3>
 
-  <h3 id="Regeln">Regeln</h3>
+      <ul>
+        <li>Beide Teilnehmer haben die Wahl aus drei Handzeichen</li>
+        <ol>
+          <li>Schere</li>
+          <li>Stein</li>
+          <li>Papier</li>
+        </ol>
+        <li>Vor dem Anzeigen eines der Zeichen wird von 3 heruntergezählt</li>
+        <li>Die Spieler zählen selbst oder lassen einen Zuschauer zählen</li>
+        <li>
+          Bei Ende des Countdowns zeigen die Spieler Ihre Wahl per Handzeichen
+        </li>
+        <li>
+          Der Gewinner wird festgestellt (Welches Zeichen welches schlägt kann
+          mittels der <a href="#Schlag-Tabelle">Schlag-Tabelle</a> ermittelt
+          werden
+        </li>
+      </ul>
 
-  <ul>
-    <li>Beide Teilnehmer haben die Wahl aus drei Handzeichen</li>
-    <ol>
-      <li>Schere</li>
-      <li>Stein</li>
-      <li>Papier</li>
-    </ol>
-    <li>Vor dem Anzeigen eines der Zeichen wird von 3 heruntergezählt</li>
-    <li>Die Spieler zählen selbst oder lassen einen Zuschauer zählen</li>
-    <li>
-      Bei Ende des Countdowns zeigen die Spieler Ihre Wahl per Handzeichen
-    </li>
-    <li>
-      Der Gewinner wird festgestellt (Welches Zeichen welches schlägt kann
-      mittels der <a href="#Schlag-Tabelle">Schlag-Tabelle</a> ermittelt
-      werden
-    </li>
-  </ul>
+      <h3 id="Schlag-Tabelle">Schlag-Tabelle</h3>
 
-  <h3 id="Schlag-Tabelle">Schlag-Tabelle</h3>
+      <p>
+        In der folgenden Tabelle erfahrt ihr welches Handzeichen welches
+        <b>schlägt</b>
+      </p>
 
-  <p>
-    In der folgenden Tabelle erfahrt ihr welches Handzeichen welches
-    <b>schlägt</b>
-  </p>
+      <p>
+        <em
+          >Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus
+          facilis deserunt minima. Et in quidem quos repellendus temporibus,
+          voluptates dolores omnis odio voluptatibus voluptate? Voluptatem
+          impedit possimus error quaerat maxime?</em
+        >
+      </p>
 
-  <p>
-    <em
-      >Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus
-      facilis deserunt minima. Et in quidem quos repellendus temporibus,
-      voluptates dolores omnis odio voluptatibus voluptate? Voluptatem
-      impedit possimus error quaerat maxime?</em
-    >
-  </p>
-
-  <table border="3px">
-    <tr>
-      <th>Zeichen</th>
-      <th>Schere</th>
-      <th>Stein</th>
-      <th>Papier</th>
-    </tr>
-    <tr>
-      <td>Schlägt</td>
-      <td>Papier</td>
-      <td>Schere</td>
-      <td>Stein</td>
-    </tr>
-    <tr>
-      <td>wird geschlagen</td>
-      <td>Stein</td>
-      <td>Papier</td>
-      <td>Schere</td>
-    </tr>
-  </table>
-  {{> comments}}
+      <table border="3px">
+        <tr>
+          <th>Zeichen</th>
+          <th>Schere</th>
+          <th>Stein</th>
+          <th>Papier</th>
+        </tr>
+        <tr>
+          <td>Schlägt</td>
+          <td>Papier</td>
+          <td>Schere</td>
+          <td>Stein</td>
+        </tr>
+        <tr>
+          <td>wird geschlagen</td>
+          <td>Stein</td>
+          <td>Papier</td>
+          <td>Schere</td>
+        </tr>
+      </table>
+      {{> comments}}
+    </div>
+  </div>
 </main>
 {{> footer}}
