--- a/src/views/impressum.mustache
+++ b/src/views/impressum.mustache
@@ -1,5 +1,9 @@
 {{> header}}
-<main class="main">
-  Erstellt von der Webprogrammierungsgruppe A2
+<main class="container">
+  <div class="row">
+    <div class="col">
+      Erstellt von der Webprogrammierungsgruppe A2
+    </div>
+  </div>
 </main>
 {{> footer}}
