--- a/src/views/login.mustache
+++ b/src/views/login.mustache
@@ -1,17 +1,21 @@
 {{> header}}
-<main class="main">
-  <form method="post" action="/login">
-    <p>
-      <label>Username:</label>
-      <input type="text" name="username">
-    </p>
-    <p>
-      <label>Password:</label>
-      <input type="text" name="password">
-    </p>
-    <p>
-      <input type="submit" value="Login">
-    </p>
-  </form>
+<main class="container">
+  <div class="row justify-content-center">
+    <div class="col-12 col-md-8 col-lg-4">
+      <form method="post" action="/login">
+        <div class="mb-3">
+          <label for="username" class="form-label">Username</label>
+          <input id="username" type="text" name="username" class="form-control">
+        </div>
+        <div class="mb-3">
+          <label for="password" class="form-label">Passwort</label>
+          <input id="password" type="password" name="password" class="form-control">
+        </div>
+        <div class="mb-3">
+          <button type="submit" class="btn btn-primary">Login</button>
+        </div>
+      </form>
+    </div>
+  </div>
 </main>
 {{> footer}}
