--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -14,48 +14,22 @@
     border: 5px solid yellow;
 }
 
-/* Layout */
-.grid-wrapper {
-    display: grid;
-    grid-template-columns: 5% 90% 5%;
-}
-
-.header,
-.main,
-.footer {
-    grid-column-start: 2;
-}
-
-.header {
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-}
-
-.header .logo {
+/* Logo */
+.logo {
     display: block;
     padding-right: 1rem;
     text-decoration: none;
     color: black;
 }
 
-.header .logo img {
+.logo img {
     padding-right: .5rem;
 }
 
-.game-nav {
-    width: 100%;
-}
-
-.game-nav ul {
-    display: flex;
-    flex-wrap: wrap;
-    list-style: none;
-    padding: 0;
-}
-
-.game-nav ul li {
-    padding-right: 1rem;
+.logo strong {
+    font-family: 'Comforter', cursive;
+    font-size: 52px;
+    vertical-align: -13px;
 }
 
 /* Styles */
@@ -65,10 +39,5 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
     font-family: 'Comforter', cursive;
-    font-size: 1.5em;
-}
-
-.header strong {
-    font-family: 'Comforter', cursive;
-    font-size: 52px;
+    margin-top: 1em;
 }
