--- a/src/views/games/tictactoe.mustache
+++ b/src/views/games/tictactoe.mustache
@@ -1,30 +1,34 @@
 {{> header}}
-<main class="main">
-  <h1>Tic Tac Toe - Spielanleitung</h1>
-  <h2>Inhaltsverzeichnis</h2>
+<main class="container">
+  <div class="row">
+    <div class="col-12">
+      <h1>Tic Tac Toe - Spielanleitung</h1>
+      <h2>Inhaltsverzeichnis</h2>
 
-    <ol>
-      <li><a href="#Gegeben">Gegebenheiten</a></li>
-      <li><a href="#Regeln">Regeln</a></li>
-      <li><a href="#Gewinnmöglichkeiten">Gewinnmöglichkeiten</a></li>
-    </ol>
+        <ol>
+          <li><a href="#Gegeben">Gegebenheiten</a></li>
+          <li><a href="#Regeln">Regeln</a></li>
+          <li><a href="#Gewinnmöglichkeiten">Gewinnmöglichkeiten</a></li>
+        </ol>
 
-  <h2 id="Gegeben" >Gegebenheiten</h2>
-  <ul>
-    <li>Anzahl der Spieler: <b>2</b></li>
-    <li>Spieldauer: <b>bis zu 10 Minuten</b></li>
-  </ul>
-  <h2 id="Regeln" >Regeln</h2>
-  <ul>
-    <li>Der Spieler wählt zwischen den Steinen <b>X</b> und <b>O</b></li>
-    <li>Legt <b>abwechselnd</b> eure Steine auf das Spielfeld</li>
-    <li>Sieger ist, wer zuerst eine <b>Dreiherreihe</b> gelegt hat</li>
-    <li>Die Steine können dabei <b>senkrecht</b>, <b>waagerecht</b> oder <b>diagonal</b> auf dem
-      Spielfeld liegen</li>
-  </ul>
-  <br>
-  <img id="Gewinnmöglichkeiten" src="/assets/tictactoe1.PNG"alt="" width="600" height=""></img>
+      <h2 id="Gegeben" >Gegebenheiten</h2>
+      <ul>
+        <li>Anzahl der Spieler: <b>2</b></li>
+        <li>Spieldauer: <b>bis zu 10 Minuten</b></li>
+      </ul>
+      <h2 id="Regeln" >Regeln</h2>
+      <ul>
+        <li>Der Spieler wählt zwischen den Steinen <b>X</b> und <b>O</b></li>
+        <li>Legt <b>abwechselnd</b> eure Steine auf das Spielfeld</li>
+        <li>Sieger ist, wer zuerst eine <b>Dreiherreihe</b> gelegt hat</li>
+        <li>Die Steine können dabei <b>senkrecht</b>, <b>waagerecht</b> oder <b>diagonal</b> auf dem
+          Spielfeld liegen</li>
+      </ul>
+      <br>
+      <img id="Gewinnmöglichkeiten" src="/assets/tictactoe1.PNG"alt="" width="600" height=""></img>
 
-  {{> comments}}
+      {{> comments}}
+    </div>
+  </div>
 </main>
 {{> footer}}
