--- a/src/views/partials/footer.mustache
+++ b/src/views/partials/footer.mustache
@@ -1,16 +1,12 @@
-      <footer class="footer">
-        <nav>
-          <p align="center">
-            <a href="#top"> Back to Top </a>
-          </p>
-          <p align="center">
-            <a href="/">zurück zur Startseite</a>
-          </p>
-          <p align="center">
-            <a href="/impressum">Impressum</a>
-          </p>
-        </nav>
+      <footer class="container pt-5">
+        <nav class="row">
+          <ul class="nav justify-content-center">
+            <li class="nav-item"><a class="nav-link" href="#top">Back to top</a></li>
+            <li class="nav-item"><a class="nav-link" href="/">Zurück zur Startseite</a></li>
+            <li class="nav-item"><a class="nav-link" href="/impressum">Impressum</a></li>
+          </ul>
       </footer>
     </div> <!-- .grid-wrapper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
 </html>
