--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -72,3 +72,12 @@ h1, h2, h3, h4, h5, h6 {
     font-family: 'Comforter', cursive;
     font-size: 52px;
 }
+.notliked{
+    color: grey
+}
+.fa-heart:hover{
+    color:red
+}
+.liked{
+    color:red
+}
