Besuchszahle pro User

--- a/src/views/games/kniffel.mustache
+++ b/src/views/games/kniffel.mustache
@@ -1,5 +1,5 @@
 {{> header}}
-<main class="main">
+<main class="container">
   <section>
     <h1>Kniffel Spielanleitung</h1>
     <h2>Inhaltsverzeichnis</h2>
