--- a/src/views/index.mustache
+++ b/src/views/index.mustache
@@ -42,6 +42,7 @@
           </tr>
         </tbody>
       </table>
+      {{> mostVisitedSites}}
     </section>
     <section class="col-12 col-lg-6">
       <h2>Spielevorschläge</h2>
