--- a/src/views/index.mustache
+++ b/src/views/index.mustache
@@ -5,7 +5,7 @@
       <h1>Spielanleitungen</h1>
       <p>Wir wollen Spieleanleitungen für die absoluten Klassiker der
         Gesellschaftsspiele und Kartenspiele schreiben.</p>
-
+      {{> favorites}}
       <table class="table">
         <thead>
           <tr>
