--- a/src/views/partials/header.mustache
+++ b/src/views/partials/header.mustache
@@ -39,9 +39,10 @@
               {{/userName}}
               {{#userName}}
                 <li class="nav-item">Hallo {{userName.name}}!</li>
-                <li class="nav-item">Favoriten!</li>
                 <li class="nav-item"><a class="nav-link" href="/logout">Logout</a></li>
               {{/userName}}
+              {{> favoriteButton}}
+              
             </ul>
           </nav>
         </div>
